--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <section>
       <div class="container-fluid wraptwo ">
         <div class="styletext">
-            <img class=" wow animate__zoomIn"src="img/anim.svg" width="80%">
-            <h1 class="textone wow animate__slideInUp">Impara come lavorare in Agile</h1>
-            <p class="textone wow fadeIn">Qualcosa cosa cosa cosa cosa cosa qal</p>
+            <img class=" wow animate__zoomIn"src="img/anim.svg" height="35%">
+            <h1 class="textone wow animate__slideInUp">Lean & Agile</h1>
+            <p class="textwo wow fadeIn">Impara a ridurre gli sperchi e lavorare in team, questa guida contiene i metodi più utilizzati per la riuscita di un progetto.<br> Dall'idea fino alla creazione di un prototipo funzionante con i realtivi test</p>
              <div class="but2"pd-popup-open="popupNew" href="#" class="btn btn-success">Scarica Guida</div> 
              </div>
          </div>
          <div class="container">  
           <div class="popup" pd-popup="popupNew">
               <div class="popup-inner">
-                  <h1>Grazie!</h1>
-                <p>Leggi la guida e dimmi cosa ne pensi</p>
+                  <h1 class="textalign3">Grazie!</h1>
+                <p class="textalign3">Leggi la guida e dimmi cosa ne pensi</p>
                   <p><a pd-popup-close="popupNew" href="#" class="btn btn-danger">Chiudi</a></p>
                   <a class="popup-close" pd-popup-close="popupNew" href="#"> </a>
               </div>
@@ -54,16 +54,18 @@
       <div class="container-fluid wraptree">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-6">
+            <div class="col-xl-6">
               <div class="teamimg">
               <img src="img/team.svg" >
              </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-xl-6">
               <div class="textalign">
               <h5> Overview </h5>
               <h1> La Guida</h1>
-              <p>Questa guida aiuta i neofiti del mestiere ad imparare a muoversi
+              <p class="textwo">
+                Sei un neofita del settore o un semplice curioso? Benvenuto in UXFlow un viaggio al centro del design. Questa guida cercherà di darti molteplici nozioni come: 
+                Come fare a lavorare in Team? Come posso sopravvivere fino alla consegna di un progetto? e molto altro!
               </p>
             </div>
             </div>
@@ -74,30 +76,31 @@
    <section>
     <div class="container-fluid wrapfour">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-xl-6">
           <div class="textalign2">
           <h5 > Overview </h5>
-          <h1 > La Guida</h1>
-          <p >Questa guida aiuta i neofiti del mestiere ad imparare a muoversi
+          <h1 >Contenuti</h1>
+          <p class="textwo">
+           Qui puoi scaricare tutti i template pronti all'uso che troverai all'interno della guida. Dalle Personas, alle Matrici di posizionamento e molto altro!
           </p>
         </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-xl-6"> 
           <div class="container">
             <div class="row">
-              <div class="col-sm">
+              <div class="col-xl">
                <div class="card1">
                 <h3> Titolo</h3>
                 <div class="but4">Download</div>
                </div>
               </div>
-              <div class="col-sm">
+              <div class="col-xl">
                 <div class="card1">
                   <h3> Titolo</h3>
                    <div class="but4">Download</div> 
                   </div>
                </div>
-              <div class="col-sm">
+              <div class="col-xl">
                 <div class="card1">
                   <h3> Titolo</h3>
                   <div class="but4">Download</div>
@@ -107,14 +110,14 @@
           </div>
           <div>
             <div class="row">
-              <div class="col-sm">
+              <div class="col-xl">
                
                <div class="card1"> 
                 <h3> Titolo</h3>
                   <div class="but4">Download</div>
               </div>
               </div>
-              <div class="col-sm">
+              <div class="col-xl">
                 
                 <div class="card1"> 
                   <h3> Titolo</h3>
@@ -131,18 +134,18 @@
   <div class="container-fluid wrapfive">
     <div class="contentform">
  <div class="row">
-   <div class="col-sm">
+   <div class="col-xl-5">
   <img src="img/avatar.svg">
 </div>
    
-   <div class="col-sm">
+   <div class="col-xl-6">
     <div class="textalign">
     <h6 > Autore </h6>
     <h1 >Simona Correale</h1>
     <h5 > UX/UI Designer </h5>
     <p >Questa guida aiuta i neofiti del mestiere ad imparare a muoversi
     </p>
-    <div class="but3">Dimmi cosa ne pensi </div>
+    <div class="but3">Scrivimi</div>
   </div>
   </div>
  </div>
