--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-xl-6">
-              <div class="teamimg">
+              <div class="teamimg wow animate__fadeInLeft">
               <img src="img/team.svg" >
              </div>
             </div>
             <div class="col-xl-6">
-              <div class="textalign">
+              <div class="textalign  wow animate__fadeInRight">
               <h5> Overview </h5>
               <h1> La Guida</h1>
               <p class="textwo">
@@ -79,7 +79,7 @@
     <div class="container-fluid wrapfour">
       <div class="row">
         <div class="col-xl-6">
-          <div class="textalign2">
+          <div class="textalign2 wow animate__fadeInLeft">
           <h5 > Overview </h5>
           <h1 >Contenuti</h1>
           <p class="textwo">
@@ -87,7 +87,7 @@
           </p>
         </div>
         </div>
-        <div class="col-xl-6"> 
+        <div class="col-xl-6  wow animate__fadeIn"> 
           <div class="container">
             <div class="row">
               <div class="col-xl">
@@ -106,14 +106,12 @@
                 <div class="card1">
                   <h3> Titolo</h3>
                   <div class="but4">Download</div>
-                 
               </div>
             </div>
           </div>
           <div>
             <div class="row">
               <div class="col-xl">
-               
                <div class="card1"> 
                 <h3> Titolo</h3>
                   <div class="but4">Download</div>
@@ -134,7 +132,7 @@
  </section>
  <section id="section4">
   <div class="container-fluid wrapfive">
-    <div class="contentform">
+    <div class="contentform wow animate__fadeIn">
  <div class="row">
    <div class="col-xl-5">
   <img src="img/avatar.svg">
