--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container-fluid wraptwo ">
         <div class="styletext">
             <img class=" wow animate__zoomIn"src="img/anim.svg" height="35%">
-            <h1 class="textone wow animate__slideInUp">Lean & Agile</h1>
+            <h1 class="textone wow animate__slideInUp">LeanUX & Agile</h1>
             <p class="textwo wow fadeIn">Impara a ridurre gli sperchi e lavorare in team, questa guida contiene i metodi più utilizzati per la riuscita di un progetto.<br> Dall'idea fino alla creazione di un prototipo funzionante con i realtivi test</p>
              <div class="but2" pd-popup-open="popupNew" href="#" class="btn btn-success">Scarica Guida</div> 
              </div>
@@ -43,7 +43,7 @@
          <div class="container">  
           <div class="popup" pd-popup="popupNew">
               <div class="popup-inner">
-                  <h1 class="textalign3">Grazie!</h1>
+                  <h1 class="textalign3 textone">Grazie!</h1>
                 <p class="textalign3">Leggi la guida e dimmi cosa ne pensi</p>
                   <p><a pd-popup-close="popupNew" href="#" class="btn btn-danger">Chiudi</a></p>
                   <a class="popup-close" pd-popup-close="popupNew" href="#"> </a>
@@ -64,7 +64,7 @@
             <div class="col-xl-6">
               <div class="textalign  wow animate__fadeInRight">
               <h5> Overview </h5>
-              <h1> La Guida</h1>
+              <h1 class="textone"> La Guida</h1>
               <p class="textwo">
                 Sei un neofita del settore o un semplice curioso? Benvenuto in UXFlow un viaggio al centro del design. Questa guida cercherà di darti molteplici nozioni come: 
                 Come fare a lavorare in Team? Come posso sopravvivere fino alla consegna di un progetto? e molto altro!
@@ -81,7 +81,7 @@
         <div class="col-xl-6">
           <div class="textalign2 wow animate__fadeInLeft">
           <h5 > Overview </h5>
-          <h1 >Contenuti</h1>
+          <h1 class="textone">Contenuti</h1>
           <p class="textwo">
            Qui puoi scaricare tutti i template pronti all'uso che troverai all'interno della guida. Dalle Personas, alle Matrici di posizionamento e molto altro!
           </p>
@@ -93,18 +93,27 @@
               <div class="col-xl">
                <div class="card1">
                 <h3> Titolo</h3>
+                <div class="paddingimg2">
+                 <img src="img/avatar.svg" width="90%">
+                </div>
                 <div class="but4">Download</div>
                </div>
               </div>
               <div class="col-xl">
                 <div class="card1">
                   <h3> Titolo</h3>
-                   <div class="but4">Download</div> 
+                <div class="paddingimg2">
+                 <img src="img/avatar.svg" width="90%">
+                </div>
+                <div class="but4">Download</div> 
                   </div>
                </div>
               <div class="col-xl">
                 <div class="card1">
                   <h3> Titolo</h3>
+                  <div class="paddingimg2">
+                   <img src="img/avatar.svg" width="90%">
+                  </div>
                   <div class="but4">Download</div>
               </div>
             </div>
@@ -114,14 +123,20 @@
               <div class="col-xl">
                <div class="card1"> 
                 <h3> Titolo</h3>
-                  <div class="but4">Download</div>
+                <div class="paddingimg2">
+                 <img src="img/avatar.svg" width="80%">
+                </div>
+                <div class="but4">Download</div>
               </div>
               </div>
               <div class="col-xl">
                 
                 <div class="card1"> 
                   <h3> Titolo</h3>
-                  <div class="but4">Download</div>
+                <div class="paddingimg2">
+                 <img src="img/avatar.svg" width="80%">
+                </div>
+                <div class="but4">Download</div>
                 </div>
               </div>
             </div>
@@ -137,7 +152,6 @@
    <div class="col-xl-5">
   <img src="img/avatar.svg">
 </div>
-   
    <div class="col-xl-6">
     <div class="textalign">
     <h6 > Autore </h6>
