--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-xl">
                <div class="card1">
-                <h3> Titolo</h3>
+                <h3> Persona</h3>
                 <div class="paddingimg2">
                  <img src="img/avatar.svg" width="90%">
                 </div>
@@ -101,7 +101,7 @@
               </div>
               <div class="col-xl">
                 <div class="card1">
-                  <h3> Titolo</h3>
+                  <h3> Matrice</h3>
                 <div class="paddingimg2">
                  <img src="img/avatar.svg" width="90%">
                 </div>
@@ -130,6 +130,15 @@
               </div>
               </div>
               <div class="col-xl">
+                <div class="card1"> 
+                 <h3> Titolo</h3>
+                 <div class="paddingimg2">
+                  <img src="img/avatar.svg" width="80%">
+                 </div>
+                 <div class="but4">Download</div>
+               </div>
+               </div>
+              <div class="col-xl">
                 
                 <div class="card1"> 
                   <h3> Titolo</h3>
@@ -138,6 +147,7 @@
                 </div>
                 <div class="but4">Download</div>
                 </div>
+                
               </div>
             </div>
           </div>  
