--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <img class=" wow animate__zoomIn"src="img/anim_animated.svg" height="35%">
             <h1 class="textone wow animate__slideInUp">LeanUX & Agile</h1>
             <p class="textwo wow fadeIn">Impara a ridurre gli sperchi e lavorare in team, questa guida contiene i metodi più utilizzati per la riuscita di un progetto.<br> Dall'idea fino alla creazione di un prototipo funzionante con i realtivi test</p>
-             <div class="but2" pd-popup-open="popupNew"class="btn btn-success" ><a href="" download="guida.pdf">Scarica Guida</a></div> 
+             <div class="but2" pd-popup-open="popupNew"class="btn btn-success" >Scarica Guida</div> 
              </div>
          </div>
          <div class="container">  
           <div class="popup" pd-popup="popupNew">
               <div class="popup-inner">
-                <img src="img/star_animated.svg" class=" wow animate__bounceIn" width="40%">
+                <img src="img/star_animated.svg" class=" wow animate__bounceIn " width="40%">
                   <h1 class="textalign3 textone"> Grazie!</h1>
                   
                 <p class="textalign3">Leggi la guida e dimmi cosa ne pensi</p>
