--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   <header>
     <div class="container-fluid wrapone">
     <div class="container-fluid">
-      <picture>
-        <source srcset="img/icon_web_dark.svg" media="(prefers-color-scheme: dark)"/>
-        <source srcset="img/icon_web.svg" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)"/>
-       <img loading="lazy" src="img/icon_web.svg" alt="web design icon" height="35px;" class="positionlogo" href="#section1"> 
+      <a href="#section1">
+      <picture class="zoom">
+        <source srcset="img/icon_web_dark.svg" media="(prefers-color-scheme: dark)" />
+        <source srcset="img/icon_web.svg" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)" />
+       <img loading="lazy" src="img/icon_web.svg" alt="web design icon" height="35px;" class="positionlogo" href="#section1" >
      </picture>
+    </a>
         <ul> 
             <li ><a href="#section2">Guida</a></li>
             <li ><a href="#section3">Contenuti</a></li>
